--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,9 @@
       "Agere\\Service": "src/",
       "Agere\\ServiceManager": "src/",
       "Agere\\String": "src/"
+    },
+    "psr-4": {
+      "Agere\\Format\\": "src/"
     }
   }
 }
